fixed text alignment

--- a/src/app/component/eco-news/eco-news-detail/eco-news-detail.component.css
+++ b/src/app/component/eco-news/eco-news-detail/eco-news-detail.component.css
@@ -104,7 +104,7 @@
 .news-text-container {
     margin: 0 98px;
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
 }
 
 .news-text {
