--- a/src/app/component/eco-news/news-preview-page/news-preview-page.component.css
+++ b/src/app/component/eco-news/news-preview-page/news-preview-page.component.css
@@ -114,7 +114,7 @@
 .news-text-container {
   margin: 0 98px;
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
 }
 
 .news-text {
